# legendado

./: .gitignore  README.md
client/: elm.json
client/public/: index.html  manifest.json
client/src/: Api.elm  Init.elm  Main.elm  Model.elm  Update.elm  View.elm  index.js  main.css
server/: .env.sample  Cargo.toml  Dockerfile  Migrant.toml  Rocket.toml  docker-compose.yml
server/migrations/20190904103911_create-subitltles/: down.sql  up.sql
server/migrations/20190914134759_create-users/: up.sql
server/migrations/20190917104750_add-primary-key-to-users-and-subtitles/: down.sql  up.sql
server/migrations/20190917104802_add-user-to-subtitles/: down.sql  up.sql
server/migrations/20190918102052_create-downloads/: down.sql  up.sql
server/migrations/20190918103124_add-not-null-restrictions/: down.sql  up.sql
server/migrations/20190922095557_create-feedbacks/: down.sql  up.sql
server/migrations/20190926103406_create-authentication-pins/: down.sql  up.sql
server/src/: auth.rs  database.rs  env.rs  feedback.rs  lib.rs  main.rs  server.rs  subtitle_for_list.rs  user_guard.rs
server/src/server/: pin_authenticate.rs  pin_request.rs  subtitle.rs  subtitles.rs  upload.rs
server/tests/: authentication_test.rs  test_kit.rs  uploads_test.rs
