[package]
name = "legendado-server"
version = "0.1.0"
authors = ["lsunsi"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_cors = "0.5.0"
serde_json = "1.0"
jsonwebtoken = "5.0.1"
rand = "0.7"

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["postgres_pool", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
